Reduce whitespace on Basics page. Fix left hand alignment.

--- a/Paco-Server/ear/default/web/css/basics.css
+++ b/Paco-Server/ear/default/web/css/basics.css
@@ -1,5 +1,7 @@
 .basics md-input-container {
   /* overflow-y: hidden; */
+  margin: 4px;
+  padding: 4px;
 }
 
 md-input-container div[ng-message] {
